Kubernetes/Traefik/yamls/ig-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-https-redirect
  namespace: traefik
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-security
  namespace: traefik
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-websecure
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.urbaman.it`)
      services:
        - kind: TraefikService
          name: api@internal
          serversTransport: traefik-dashboard-transport
      middlewares:
        - name: traefik-dashboard-security
  tls:
    secretName: traefik-urbaman-it
    options:
      name: traefik-dashboard-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-web
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`traefik.urbaman.it`)
      services:
        - kind: TraefikService
          name: api@internal
      middlewares:
        - name: traefik-dashboard-https-redirect
